--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,7 +21,9 @@
     ],
     "paths": {
       "~/*": ["./src/*"]
-    }
+    },
+    // Custom:
+    "noUnusedLocals": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
