--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "6.0.0-rc.3",
-    "typescript": "5.1.3",
-    "zod": "^3.21.4"
+    "swr": "^2.2.0",
+    "typescript": "5.1.3"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.18.1"
